--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h1>Pokemon and their Heights</h1>
     
     <ul class="pokemon-list"></ul>
-
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 
