--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
   </head>
 
   <body>
+    <div>
+      <h1>Pokemon and their Heights</h1>
+    </div>
 
-    <h1>Pokemon and their Heights</h1>
-    
-    <ul class="pokemon-list"></ul>
+    <div>
+      <ul style="list-style-type: none;" class="pokemon-list"></ul>
+    </div>
+
+    <div id="modal-container">
+    </div>
+
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
