--- a/index.html
+++ b/index.html
@@ -15,28 +15,24 @@
     </nav>
 
 
-    <div class="list-group">
-      <header class="container">
-        <ul style="list-style-type: none;" class="list-group"></ul>
-      </header>
+    <div class="container page-container">
+        <ul class="pokemon-list list-group"></ul>
     </div>
 
 <!-- Modal -->
-    <div class="modal-fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-fade" id="modal-container" tabindex="-1" role="dialog" aria-labelledby="model-label" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel"></h5>
-            <button type="button" class="close" data-toggle="modal" aria-label="Close">
+            <h5 class="modal-title" id="modal-label">Modal Title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            ...
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
