Finishing touches on app
Customized the styling for the page in css just a bit more, to make it look a bit more realistic. Added linting to make sure there were no bugs. Updated the README file to convey what the page is going to be about and how to navigate it. And minified the JS and CSS.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-      <a class="navbar-brand" href="#" alt="header">Pokedex</a>
+      <a class="navbar-brand" href="#" alt="header">
+        <img class="image" src="img/International_Pokémon_logo.svg.png" alt="Pokemon Image">
+      </a>
     </nav>
 
 <!-- Modal -->
